<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_favorite"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="12dp"
    android:elevation="16dp"
    app:cardCornerRadius="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp">

        <ImageView
            android:id="@+id/iv_favorite_image"
            android:layout_width="180dp"
            android:layout_height="236dp"
            android:minHeight="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageButton
            android:id="@+id/btn_favorite_favorite"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_margin="2dp"
            android:background="@drawable/bg_circle_transparent"
            android:src="@drawable/ic_favorite_off"
            app:layout_constraintBottom_toBottomOf="@+id/iv_favorite_image"
            app:layout_constraintEnd_toEndOf="@+id/iv_favorite_image" />

        <TextView
            android:id="@+id/tv_favorite_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_bold"
            android:maxLines="1"
            android:text="@string/food_title"
            android:textColor="@color/dark_gray"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/iv_favorite_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_favorite_region"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_medium"
            android:maxLines="1"
            android:text="@string/food_region"
            android:textColor="@color/dark_gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_favorite_title"
            app:layout_constraintStart_toStartOf="@+id/tv_favorite_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_favorite_title" />

        <TextView
            android:id="@+id/tv_favorite_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_regular"
            android:justificationMode="inter_word"
            android:maxLines="11"
            android:text="@string/food_description"
            android:textColor="@color/gray"
            android:textSize="11sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_favorite_region"
            app:layout_constraintStart_toStartOf="@+id/tv_favorite_region"
            app:layout_constraintTop_toBottomOf="@+id/tv_favorite_region" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>