<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.recipedetail.RecipeDetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true"
        app:liftOnScrollTargetViewId="@id/ns_detail">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/recipe"
            app:navigationIcon="@drawable/ic_back"
            app:titleCentered="true"
            app:layout_scrollFlags="scroll|enterAlwaysCollapsed|enterAlways|snap"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ns_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_detail_image"
                android:layout_width="match_parent"
                android:layout_height="312dp"
                android:layout_marginTop="50dp"
                android:src="@drawable/ic_placeholder"/>

            <TextView
                android:id="@+id/tv_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/food_title"
                android:fontFamily="@font/poppins_bold"
                android:textSize="14sp"
                android:textColor="@color/dark_red"/>

            <TextView
                android:id="@+id/tv_detail_region"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_region"
                android:fontFamily="@font/poppins_medium"
                android:textSize="12sp"
                android:textColor="@color/gray"/>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tl_detail_tabs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        app:layout_anchor="@+id/ns_detail"
        app:layout_anchorGravity="center" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_detail_favorite"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="30dp"
        android:backgroundTint="@color/white"
        android:src="@drawable/ic_favorite_off" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>